--- a/index.html
+++ b/index.html
@@ -206,6 +206,8 @@
                             <p class="inner-desc">
                                 Lorem ipsum dolor sit amet, 
                                 consectetur adipiscing.
+                                Lorem ipsum dolor sit amet, 
+                                consectetur adipiscing.
                             </p>
                     </div>
             </div>
